<resources>
    <string name="app_name">Darji Family App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="about_title">જ્ઞાતિ - દર્શન</string>
    <string name="about_text1">આપણી જ્ઞાતિ “શ્રી દંઢાવ્ય છોત્તેર ગોળ” નામે ઓળખાય છે. મૂળે આપણે પીપાવંશી દરજી છીએ. આપણો ગોળ બધાએ લગભગ દોઢ સો વર્ષ થયા હશે. ગોળમાં હાલમાં ૧૧૦ ગામ છે અને કુટુંબોની સંખ્યા ૪૦૦૦ જેટલી છે. મુખ્ય ગામો વિજાપુર તાલુકાના છે. બીજા કલોલ, કડી, મહેસાણા, ગાંધીનગર, પ્રાંતિજ વગેરે તાલુકામાં આવેલા છે. હાલ અમદાવાદમાં જ્ઞાતિનાં લગભગ ૧૮૦૦ ઘર છે. ધંધાર્થે જ્ઞાતિબંધુઓ ખેડા જિલ્લા, મુંબઇ, મધ્યપ્રદેશ, કલકત્તા, અમેરિકા, ઓસ્ટ્રેલિયા, લંડન અને કનેડા સુધી ફેલાયેલા છે. સો વર્ષ પહેલા જ્ઞાતિની કેટલીક બાહોશ વ્યકિતઓએ ધંધામાં સાહસિકતા બતાવી હતી. માણસાના વસ્તારામ જેકાદાસ અને મગનલાલ ગોપાળદાસની છત્રી બનાવવાની કંપનીઓ મુંબઇમાં સ્થપાઇ. જ્ઞાતિમાંથી છત્રીકામના ઘણા કારીગરોએ બે પેઢીઓના સહારે આજીવિકા મેળવતા. એ ઉપરાંત મોટે ભાગે લેડીઝ સિલાઇના કારીગરો મુંબઇ જઇ મુમ્માદેવીના માળામાં સહકારી ધોરણે રહેતા અને ઘરાકી કામ કરતા આ પછી પુંધરીયાઓના માળો વગેરે માળાઓ પણ ધંધાર્થે આપણા જ્ઞાતિબંધુરૂપી પંખીઓને ઉતરવા અને કામ કરવા સગવડરૂપ હતા. મુંબઇમાં કામ કરતા કારીગર બંધુઓ મોટે ભાગે મુસ્લિમ ગ્રાહકોનું કામ કરતા, સીલાઇ કામમાં ઉત્તમ કારીગર તરીકે એમાંના ઘણાએ ખ્યાતિ મેળવેલી. મુંબઇ અને અમદાવાદમાં ધંધાર્થે આવેલ જ્ઞાતિબંધુઓ એ સમયે એકલા રહેતા સ્ત્રીઓને પુરુષ સાથે શહેરમાં રહેવાનો આડકતરો પ્રતિબંધ હતો. એ સમયનું જીવન કરકસરિયું હતું. તેથી પરદેશ વેઠીને પૈસા કમાઇ આવતા. એ જમાનામાં ગામડાઓમાં રહેતા જ્ઞાતિબંધુઓની સ્થિતિ સાધારણ હતી. મોટે ભાગે હાથકામ અને ઘરાવડી હતી. ભેંસ વગરનું કોઇ ઘર નહોતું. ભેંસ આર્થિક બાબતોમાં ટેકારૂપ હતી. શિક્ષણનો વિકાસ નહિવત હતો. છતાં કેટલાક જ્ઞાતિબંધુઓ પોલીસ, રેવન્યુ ખાતામાં તથા દેશી રાજમાં નોકરી કરતા કેટલીક સ્ત્રીઓ પણ શિક્ષિકા તરીકે નોકરી કરતી. નોકરીયાતનું પ્રમાણ એક કે બે ટકાથી વધારે ન હતું. એ સમય નાત ૮૦૦ ઘરની કહેવાતી હવે ૪૦૦૦ ઘરની થઇ છે.\n\nછેલ્લા ૧૦૦ વર્ષનો ઇતિહાસ તપાસીએ તો પંચ એકમાત્ર સંસ્થા હતી. જ્ઞાતિમાં બીજી કોઇ સેવા સંસ્થા નહોતી. ગોળનો વહીવટ પરંપરાગત પંચની પધ્ધતિથી ચાલતો. ગોર બધી સત્તાઓ ભોગવતો, તે હિસાબ રાખે, થયેલ ગુના નોંધે અને પંચ દ્વારા નિકાલ કરે. નાણાંકીય હિસાબ જ્ઞાતિને ભાગ્યે જ જાણવા મળતો. કોઇ લેખિત બંધારણ કે રીત રિવાજો ન હતા. નાતવારા હોય ત્યાં મોદ નખાતી અને પંચાત થતી. ચાર પાંચ ગામના પંચાતિયા ગોર સાથે મળી ગુનાઓના ફેંસલા કરતા એ જમાનામાં પંચનો કડપ ખૂબ હતો. મોટે ભાગે કન્યાવિક્રય, સાટાપેટાં, વેવિશાળ, પરણેલી કન્યાને સાસરે ન મોકલવી, ફારગતી વગેરે પ્રકારના કિસ્સાઓ પંચ હાથ પર લેતું અને મોદમાં નક્કી થાય તે શિક્ષાત્મક પગલાં મોટે ભાગે રોકડ કે જમણ–લઇ ગુનાની પતાવટ થતી ગંભીર ગણાતા ગુના માટે જ્ઞાતિ બહાર (જ્ઞાતિ બહિષ્કાર) નો કડક અમલ પણ હતો.\n\nઆજે જે જ્ઞાતિઓ વિકસિત ગણાય છે તેમનો પણ ૧૦૦ વર્ષનો ઇતિહાસ તપાસીએ તો અનેક કુરિવાજો અને વહેમો જોવા મળશે. એ જ રીતે આપણી જ્ઞાતિમાં પણ એ જમાનાને અનુલક્ષી કેટલાક રિવાજો હતા જેવા કે કન્યાવિક્રય, બાળલગ્ન, સાટાંપેટા, ફરજીયાત, નાતજમણ, સુંવાળાનો રિવાજ, લગ્ન વખતે દાપું., આણા વખતે હોળી ખેલ, ગામાત ભેર વગાડવાની, વેઠ, લગ્ન પ્રસંગે ફટાણા ગાવા, ગોળ બહાર કન્યા ન આપવી, સગપણ તોડવું, ફારગતી આપવી વગેરે. આ અને આવા પ્રકારના કુરિવાજો, વહેમો અને અંધશ્રધ્ધા એ જમાનામાં ભારતીય સમાજમાં બધી જ્ઞાતિઓમાં વ્યાપ્ત હતાં. ઇ.સ. ૧૯૧૫ માં ગાંધીજી દક્ષિણ આફ્રિકાથી ભારત આવ્યા. એમણે ભારતીય સમાજજીવનનાં પતનનાં કારણો શોધી કાઢયાં. ભણેલા વર્ગને એકત્રિત કર્યો અને એક તરફ સ્વરાજયનું આંદોલન શરૂ કર્યું. તો બીજી તરફ ભારતીય પ્રજાને સ્વરાજય ભોગવવા લાગક બનાવવા કેળવવાનું શરૂ કર્યું. સુધારાનું આંદોલન પણ ચલાવ્યું. ગાંધીજીના આગમન પહેલા ભારતીય સમાજના પુનરુત્થાન માટે ગુજરાતમાં દયાનંદ સરસ્વતી, સહજાનંદ સ્વામી અને નર્મદ તથા દલપતરામ જેવા મહાનુભાવોએ પોતપોતાની રીતે પ્રયત્નો કર્યો હતા. ગાંધીજીના આગમન પછી સુધારા પ્રવૃત્તિ જોરશોરથી શરૂ થઇ. અનેક સુધારક સંસ્થાઓ સ્થપાઇ. દેશમાં એક નવી હવા ફેલાઇ. ભારતીય જનસમાજમાં જાગૃત્તિ આવી. નવજવાનોમાં દેશસેવા અને સમાજસેવાના કોડ જાગ્યા.\n\nઆપણી જ્ઞાતિમાં ઇ.સ. ૧૯૨૦ થી સમાજ સુધારાની પ્રવૃત્તિ ધીમે – ધીમે શરૂ થઇ. ઇ.સ. ૧૯૨૨ માં અમદાવાદમાં સમાજ સુધારણા અંગે વિચાર કરવા જ્ઞાતિબંધુઓ એકઠા મળતાં. ૧૯૩૦ માં યુવક મંડળ સ્થપાયું. જેનું નામ “શ્રી દંઢાવ છોત્તેર ગોળ દરજી જ્ઞાતિ યુવક મંડળ” હતું. પિલવાઇ મુકામે તા. ૬-૧-૧૯૩૧ ના રોજ આ યુવક મંડળની પહેલી જાહેરસભા મળી. જેના પ્રમુખપદે હતા શ્રી. શંકરલાલ ગિરધરલાલ (સાદરાવાળા), મંત્રીઓ ખજાનચી તરીકે શ્રી રતિલાલ ત્રિકમલાલ પરમાર (સાદરાવાળા) હતા. આ પછી અમદાવાદ ખાતે મંડળની ૧૩ સભાઓ ભરાઇ જેમાં પ્રમુખ સ્થાને હતા શ્રી. નારણદાસ દેવચંદદાસ, શિવરામ રાયચંદદાસ, શંકરલાલ ગિરધરદાસ, પુરુષોત્તમ રામચંદદાસ, આ અરસામાં જ મંડળની કાર્યવાહક કમિટી પણ નીમાઇ જેમાં નીચેના સભ્યો હતા.</string>
    <string name="about_name1">શ્રી બબાભાઇ મોતીભાઇ</string>
    <string name="about_name2">શ્રી ચુનીલાલ મગનલાલ</string>
    <string name="about_name3">શ્રી નરોત્તમદાસ જેઠાલાલ</string>
    <string name="about_name4">શ્રી ભોગીલાલ શંકરલાલ</string>
    <string name="about_name5">શ્રી બળદેવદાસ નાગરદાસ</string>
    <string name="about_name6">શ્રી ચુનીલાલ પુરુષોત્તમદાસ</string>
    <string name="about_text2">મંડળના પ્રચાર માટે અને જ્ઞાતિબંધુઓમાં એકતા સ્થાપવા જાહેર ઉજાણીઓ પણ થતી આવી એક ઉજાણી અસારવા ખાતે થયેલી જેમાં ૪૦ જ્ઞાતિબંધુઓએ ભાગ લીધેલો. યુવક મંડળની મુખ્ય પ્રવૃત્તિ કેળવણીનો પ્રચાર કરવાની, જ્ઞાતિબંધુઓમાં જાગૃત્તિ લાવવાની તથા જ્ઞાતિમાં સડારૂપે રહેલા કુરિવાજો દૂર કરવાની હતી. મંડળની યોજનાઓમાં વસ્તી-પત્રક તૈયાર કરવાની મહત્વની યોજના હતી. જે આજે ૪૬ વર્ષ પછી સફળ થઇ છે. યુવક મંડળની સુધારા પ્રવૃત્તિને વેગ આપવા ‘દરજી – દીપક’, ‘દરજી હિતેચ્છુ’ વગેરે માસિક પત્રિકાઓ પ્રકાશિત કરવામાં આવતી છેલ્લા દસકામાં ‘જયોતિપ્રભા’ આવી સેવા બજાવી છે.\n\nજે ગામે પંચ મળતું ત્યાં યુવક મંડળ સુધારાવાદી પ્રચાર કરતું. આ કારણે રૂઢિચુસ્તોને મંડળ ગમ્યું નહિ અને તેના કાર્યકર્તાઓ પર નાતમાં તોફાન મચાવવાનું તહોમત મૂકવામાં આવ્યું. સને ૧૯૩૨માં પુંધરા પંચમાં યુવક મંડળની જુબાની થઇ. બે મોદ અલગ અલગ પડી છેવટે રૂઢિચુસ્તોનો પરાજય થયો અને જ્ઞાતિમાં ત્યાંથી બે તડ પડયાં. સુધારક તડમાં ૭૩ ગામ અને ૫૧૧ ઘર સામેલ થયાં. ઘણા ગામોમાં બે પક્ષ પડી ગયા. સુધારક પક્ષે પોતાનું બંધારણ અને નવા રીત રિવાજો ઘડયાં અને ૧૯૩૩માં છપાવ્યા. ત્રણ વર્ષ આમ ચાલ્યા બાદ ફરી બે તડ ઇટાદરા મુકામે ભેગા થયાં અને સ્થિતિ પાછી હતી તેવી બની. યુવકો હતાશ થયા.\n\nઇ.સ. ૧૯૪૫માં કોઇ ખાસ કારણ વગર જ્ઞાતિના ર ½ ગામ નાત બહાર મુકાયા તેમાંથી સંગ્રામ સમિતિની રચના થઇ. તીખીતમતી પત્રિકાઓ છપાઇ.આંદોલન ખૂબ જ ઉગ્ર બન્યું. જ્ઞાતિમાં ભારે ખળભળાટ મચી ગયો. છેવટે લાંઘણજ મુકામે ડોશીઓની નોમના લાડવા જમીને તેમને નાતમાં લીધા. આ અરસમાં સુધારાવાદીઓની વાતને મહત્વ અપાયું.\n\nઇ.સ. ૧૯૪૭માં દેશ આઝાદ થયો. અંગ્રેજો દેશ અને હકુમત છોડી ચાલ્યા ગયા આખાયે દેશમાં મુક્તિનો આનંદ છવાયો, ભારતીય જનસમાજે ૧૫૦ વર્ષની ગુલામીના અંધકારયુગ પછી સ્વરાજયનો સૂર્ય જોયો. મહાત્મા ગાંધી અને દેશના સર્વોચ્ચ નેતાઓએ પ્રજાઘડતરની હકાલ કર. દરેક જ્ઞાતિમાં સુધારક અને સેવાભાવી સંસ્થાઓ સ્થપાવા લાગી. આપણી જ્ઞાતિમાં એ સમયે શ્રી નારાયણદાસ રણછોડદાસ સોલંકી (કુકરવાડાવાળા) કવિ, લેખક અને નાટકકાર તરીકે પોતાની સુવાસ ફેલાવી રહ્યા હતા. તેઓ પિલવાઇવાળા શ્રી ખોડીદાસ રણછોડદાસ માસ્તરને મળ્યા. અને જ્ઞાતિમાં એક કેળવણી મંડળની જરૂર છે. એવો ભાવભીનો પ્રસ્તાવ મૂકયો. આ બે હાનુભાવોના પરિશ્રમથી “શ્રી છોત્તેર ગોળ દરજી કેળવણી મંડળ” ની સ્થાપના ઇ.સ. ૧૯૪૭માં થઇ. એમને જ્ઞાતિમાંથી વ્યાપક સહકાર મળ્યો. મંડળે શરૂઆતમાં કેળવણીના પ્રચારનું અને શિક્ષિતોને એકત્રિત કરી જ્ઞાતિના વિકાસનું કાર્ય હાથ ધર્યું. પંચના વહીવટની સુધારણમાં પણ ફાળો આપ્યો. આ પછીના ગાળામાં અમદાવાદમાં વસતા જ્ઞાતિ બંધુઓએ “અમદાવાદ સેવા સમાજ” ની સ્થાપના કરી સ્થાનિક સેવાકાર્ય ઉપાડી લીધું. થોડોક સમય આ સમાજ ચાલ્યા પછી તેનું “શ્રી છોત્તેર ગોળ દરજી કેળવણી મંડળ” માં વિલીનીકરણ થયું. આ પછી અમદાવાદમાં અલગ અલગ વોર્ડમાં નાણાં સહકારી બચત મંડળીઓ પણ શરૂ થઇ. આજે પણ આવી બચત મંડળીઓ ચાલે છે. જે ઓછા વ્યાજે સભ્યોને નાણાં ધીરે છે. આમ શરાફોના ભારે વ્યાજ અને શોષણખોરીમાંથી જ્ઞાતિબંધુઓને બચાવે છે.\n\nયુવક મંડળ, અમદાવાદ સેવા સમાજ અને શ્રી છોતેર ગોળ દરજી કેળવણી મંડળ વગેરેના પચાસ વર્ષોના પ્રયત્નોનું સરવૈયું કાઢીએ તો જ્ઞાતિમાં એક તરફ શિક્ષણનો વિકાસ થયો તો બીજી તરફ અનેક સામાજિક સુધારા પણ થયા ગોરની જોહુકમીનો અંત આવ્યો, લોકશાહી ઢબે જ્ઞાતિનું બંધારણ અમલમાં આવ્યું. નવા રીતરિવાજો નક્કી થયાં, ફરજિયાત નાતવરા બંધ થયા, ગામાત ભેર વગાડવાની વેઠ નાબૂદ થઇ, ખોટા વહેમ અને અંધશ્રધ્ધા ગયાં, દરજીઓ પ્રત્યેની સામાજિક સૂગ દૂર થઇ, બાળલગ્નો બંધ થયાં, સાટાં પેટાં અને કન્યા વિક્રિય જેવા ભારે કુરિવાજો તદ્દન નાબૂદ થઇ ગયા, લગ્નની વય મર્યાદા વધી અને આજે તો સગપણમાં છોકરા છોકરીની પરસ્પરની પસંદગીને મહત્વ અપાય છે.\n\nછેલ્લા ૨૦ વર્ષોમાં જ્ઞાતિનો ધંધાકીય આર્થિક વિકાસ પણ સારો એવો થયો છે. આજે અમદાવાદમાં આપણી જ્ઞાતિની લગભગ ૮૦ દુકાનો છે. જો કે રોજ પર કામ કરનારો વર્ગ હવે રહ્યો નથી. દરજી ભાઈઓ પોતાની દુકાન અથવા મોલ, રેડીમેડ-ગારમેન્ટ સ્ટોરમાં નોકરી કરીને સારું વેતન મેળવે છે.. અમદાવાદમાં વસતા જ્ઞાતિબંધુઓના લગભગ મોટાભાગના લોકો ઘરના ઘરવાળા છે. ટેલરીંગ કટીંગ કોલેજોમાં ધંધાનું રીતસરનું શિક્ષણ મેળવીને ધંધો કરનારાનું પ્રમાણ ઘણુ સારું એવું છે. શિક્ષણનો પણ સારો વિકાસ થયો છે.\n\nઆજની કેટલીક ઉગ્ર સમસ્યાઓ પણ છે. વધતી જતી મોંઘવારી સાથે આપણું લગ્નખર્ચ પણ વધ્યું છે. જમણવાર દાગીના સાડી વગેરેના ખર્ચા વધ્યા છે. એમાં ઘટાડા કરવા વારંવાર પંચ નિયમો અને નિયમનો બહાર પાડેલોં પણ તેનું નિષ્ઠા પૂર્વક પાલન થતું નથી. વળી સગપણ તોડવાના અને કન્યા ન તેડવાના પ્રશ્નો ઉગ્ર સ્વરૂપ ધારણ કરી રહ્યા છે. પંચે શિક્ષાત્મક પગલાં લઇને પણ આ સમસ્યાઓને ડામી શક્યું નથી. પંચની પુનર્રચના વિષે હવે માંગ ઊભી થઇ છે, પરંતુ એકલા કાયદાથી સુધારો થાય નહી એને માટે સમગ્ર જ્ઞાતિબંધુઓની નિષ્ઠા જરૂરી છે. લગ્ન ખર્ચ ઘટાડવા ત્રણ દિવસને બદલે એક દિવસના લગ્ન, આર્ય સમાજમાં લગ્ન કરવાના અને સારા લગ્ન કરવા પ્રયત્નો પણ થયા છે. સમૂહ લગ્ન અંગે “જયોતિપ્રભા” માં સારો એવો પ્રચાર કરવામાં આવ્યો વાતાવરણ તૈયાર થઇ રહ્યું છે. એ દિશામાં સાહસ અને સહકારથી કામ થાય તો અવશ્ય સમૂહ લગ્નો યોજાય અને એને કારણે જુના રિવાજો અને ભારે ખર્ચ પણ નાબૂદ થાય આજે જ્ઞાતિને કેળવણી મંડળ જેવી બીજી સેવા સંસ્થાઓની જરૂર છે. યુવક મંડળો, મહિલા મંડળો વગેરે સ્થપાય તે ખૂબ જ આવશ્યક છે. જ્ઞાતિને જરૂર છે. નિષ્ઠાવાન સેવાભાવી કાર્યકરોની આજની પ્રગતિ અને ઉત્સાહ જોતાં જ્ઞાતિનું ભાવિ ઉજ્જવળ લાગે છે.\n\n71વર્ષ ના ઇતિહાસ માં આજે આપણું શ્રી છોત્તેર ગોળ દરજી કેળવણી મંડળ ડિજિટલ યુગ માં પ્રવેશ કરી ચૂકેલ છે.14મી જાન્યુઆરી 2019 નાં મકરસંક્રાંતિ ના દિવસે કેળવણી મંડળ ના મંત્રીશ્રી શ્રી જીગ્નેશકુમાર નારણદાસ દરજી(પેથાપુર)હાલ સોલા રોડ,અમદાવાદવાળા એ કેળવણી મંડળ નું ફેસબુક એકાઉન્ટ સમાજ સમક્ષ રજૂ કર્યું.આજે આપણી કુલ 12000 ની વસ્તીમાંથી 60%(સાઈઠ ટકા )લોકો તેને અનુસરે છે.આવી લોકચાહના અને આપણાં જ્ઞાતિનાં કેટલાક વ્યવસાયલક્ષી (બિઝનેસમેન)માણસોનાં માર્ગદર્શન ને દયાનમાં રાખી આપણે પોતાની વેબસાઈટ બનાવવાનું કામ હાથ માં લીધું.તા.17.03.2019 ની કેળવણી મંડળ ની કારોબારી મિટિંગ માં તેનો ઠરાવ પાસ કરી વેબસાઈટ બનાવવાનું કામ શરુ કરવામાં આવ્યું.આપણી જ જ્ઞાતિ ના યુવાધન એવા શ્રી વિનાયકભાઈ ગિરીશભાઈ દરજી (નારદીપુર)હાલ ઘાટલોડિયા,અમદાવાદવાળા ને તે કામ સોંપવામાં આવ્યું.કેળવણી મંડળ ના મંત્રીશ્રી જીગ્નેશકુમાર એન.દરજી અને ઉપપ્રમુખ શ્રી ભાવેશભાઈ એ.દરજી (કુકરવાડા)અમદાવાદવાળાએ સાથે મળી 9(નવ) મહિના ના સમયગાળા માં આ કાર્ય સંપૂર્ણ કર્યું અને તા.15.12.2019,રવિવાર નાં રોજ શ્રી ખંડુભાઇ દેસાઈ હોલ,અસારવા,અમદાવાદ ખાતે સ્નેહસંમેલન અને ઇનામવિતરણ કાર્યક્રમ દરમિયાન આપણી "શ્રી છોત્તેર ગોળ દરજી કેળવણી મંડળ"ની વેબસાઈટ લોન્ચ કરી.વેબસાઈટ નાં ખર્ચ ને પહોંચી વળવા માટે આપણાં આદરણીય દાતા શ્રી મહેશભાઈ શકરાલાલ છત્રીવાળા નો સંપર્ક કરવામાં આવ્યો.તેમણે વેબસાઈટ નું વિહંગાવલોકન કરી કેળવણી મંડળ ને વેબસાઈટ પેટે માતબર રકમ નું દાન આપ્યું અને વેબસાઈટ નાં મુખ્ય દાતા બન્યા.આપણી આ વેબસાઈટ આજના યુગ ને અનુલક્ષી ને બનાવવામાં આવી છે.</string>
    <string name="about_text3">સંકલન – શ્રી રતિલાલ ત્રિકમલાલ પરમાર,\nશ્રી ખોડીદાસ રણછોડદાસ માસ્તર\nશ્રી બાબુભાઇ ચુનીલાલ સોલંકી\nઅને શ્રી રતિલાલ ચીમનલાલ ચૌહાણ</string>
    <string name="contact_email">info@shri76goldarjikelavanimandal.com</string>
    <string name="contact_name1">Jigneshbhai Narandas Darji</string>
    <string name="contact_phone1">9099990197</string>
    <string name="contact_address1">154/1848, Surya Apartment 3, Parasnagar, Sola road, Naranpura Ahmedabad - 380063</string>
    <string name="contact_name2">Bhaveshbhai Arvindbhai Darji</string>
    <string name="contact_phone2">9909430833</string>
    <string name="contact_address2">B-102, Shanti Residency arjun ashram road, Niryannagar, Chandlodiya Ahmedabad</string>
    <string name="bank_AccName">Shri chhoter gol darji kelvani mandal</string>
    <string name="bank_AccNo">1146735512</string>
    <string name="bank_name">Central bank of india</string>
    <string name="bank_AccType">Saving Account</string>
    <string name="bank_IFSC_Code">CBIN0280546</string>
    <string name="bank_MICR_Code">380016002</string>
    <string name="bank_branch">Laldarwaja Branch, Ahmedabad</string>
</resources>